--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="row">
         <div class="span12">
-          <a href="/build/latest.zip" class="download">Download Nightwing</a>
+          <a href="https://github.com/fristys/nightwing/blob/master/build/latest.zip" class="download">Download Nightwing</a>
         </div>
       </div>
       <div class="row">
