--- a/install.html
+++ b/install.html
@@ -44,7 +44,7 @@
       <div class="span12">
         <h3>Getting started</h3>
         <p>
-          1. Make sure you <a href="/build/latest.zip">Downloaded Nightwing</a> <br /> <br />
+          1. Make sure you <a href="https://github.com/fristys/nightwing/blob/master/build/latest.zip">Downloaded Nightwing</a> <br /> <br />
           2. Place the files in your website's css directory <br /> <br />
           3. Copy the following code somewhere in your <strong>&lt;head&gt;</strong> tags :
           <code>
