Updated tech behind the website

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <meta charset="UTF-8">
   <title>Nightwing Ultra-versatile grid system</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
   <link rel="stylesheet" href="css/nightwing-full-gutter.min.css" media="all">
   <link rel="stylesheet" href="css/style.css" media="all">
 <!--[if lt IE 9]>
   <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/css3pie/1.0.0/PIE.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/css3pie/2.0beta1/PIE_IE678.js"></script>
 <![endif]-->
 <!--[if (gte IE 6)&(lte IE 8)]>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
 <![endif]-->
 </head>
 <body>
@@ -104,8 +104,8 @@
       Created and coded by Momchil Georgiev - <a href="http://twitter.com/fristys">@fristys</a>. <br />
       This project is licensed under <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a> <br />
   </footer>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.1/jquery.fittext.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/FitText.js/1.1/jquery.fittext.min.js"></script>
   <script src="js/settings.js"></script>
 </body>
 </html>
