--- a/install.html
+++ b/install.html
@@ -81,6 +81,8 @@
           The default row class is : &nbsp;<i>.row</i><br/>
           <br/>
           Default span classes are : &nbsp;<i>.span12</i>, &nbsp;<i>.span11</i>, &nbsp;<i>.span10</i>, &nbsp;<i>.span9</i>, &nbsp;<i>.span8</i>, &nbsp;<i>.span7</i>, &nbsp;<i>.span6</i>, &nbsp;<i>.span5</i>, &nbsp;<i>.span4</i>, &nbsp;<i>.span3</i>, &nbsp;<i>.span2</i>&nbsp; and &nbsp;<i>.span1</i>
+          <br/>
+          Optional screen-based (xs,sm,md,lg) span classes are : &nbsp;<i>.span-<size>-<1-12></i>
         </p>
       </div>
     </div>
